# WarcraftHelper

./: .gitignore  CMakeLists.txt  ReadMe.md  WarcraftHelper.ini  WarcraftHelper.sln  readme.md
3rd/detours/: detours.lib
3rd/minhook/: libMinHook.x86.lib
3rd/simpleini/: SimpleIni.h
WHLoader/: CMakeLists.txt  WHLoader.vcxproj  WHLoader.vcxproj.filters  dllmain.cpp
WarcraftHelper/: CMakeLists.txt  CrashFixer.cpp  CrashFixer.h  INIreader.h  War3Versions.h  WarcraftHelper.cpp  WarcraftHelper.h  WarcraftHelper.vcxproj  WarcraftHelper.vcxproj.filters  autorep.cpp  autorep.h  campaignfix.cpp  campaignfix.h  dllmain.cpp  helper.cpp  helper.h  helper.hpp  hook.cpp  hook.h  pathfix.cpp  pathfix.h  replayview.cpp  replayview.h  showfps.cpp  showfps.h  showhpbar.cpp  showhpbar.h  singleton.h  sizebypass.cpp  sizebypass.h  u9helper.cpp  u9helper.h  unlockfps.cpp  unlockfps.h  verinfo.cpp  verinfo.h  version.h  widescreen.cpp  widescreen.h  windowfixer.cpp  (+1 more)
WarcraftHelper/Release/WarcraftHelper.tlog/: CL.command.1.tlog  WarcraftHelper.lastbuildstate
WarcraftHelper/config/: config.cpp  config.hpp
WarcraftHelper/game/: warcraft.cpp  warcraft.h  warcraft.hpp
WarcraftHelper/plugin/: autorep.cpp  autorep.h  autorep.hpp  campaignfix.cpp  campaignfix.h  campaignfix.hpp  fpslimiter.cpp  fpslimiter.hpp  pathfix.cpp  pathfix.h  pathfix.hpp  plugin.h  plugin.hpp  replayview.cpp  replayview.h  replayview.hpp  showfps.cpp  showfps.h  showfps.hpp  showhpbar.cpp  showhpbar.h  showhpbar.hpp  sizebypass.cpp  sizebypass.h  sizebypass.hpp  u9helper.cpp  u9helper.h  u9helper.hpp  unlockfps.cpp  unlockfps.h  unlockfps.hpp  widescreen.cpp  widescreen.h  widescreen.hpp  windowfixer.cpp  windowfixer.h  windowfixer.hpp
d3d9/: CMakeLists.txt  d3d9p.cpp  d3d9p.hpp
